--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "angular2-flash-messages": "^3.0.1",
+    "jsqr": "^1.4.0",
+    "node-forge": "^0.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
