--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
+    "node-forge": "^0.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   }
